# poe-search

./: .cursorrules  .editorconfig  .flake8  .gitignore  .gitkeep  .pre-commit-config.yaml  .prettierrc  .tool-config.toml  =0.0.24  API_STATUS_REPORT.md  AUTOMATIC_TOKEN_MANAGEMENT.md  CHANGELOG.md  CONTRIBUTING.md  FORMKEY_EXTRACTION_GUIDE.md  MODERNIZATION_SUMMARY.md  Makefile  ORGANIZATION_REPORT.md  PROJECT_GOALS.md  PROJECT_STATUS.md  README.md  SECURITY.md  TOKEN_UPDATE_GUIDE.md  USAGE_GUIDE.md  WORKFLOW.md  complete_gui_fix.sh  conversation_test_results_20250630_223356.json  conversations_20250725_130430.json  debug_browser_client.py  demo_startup_integration.py  emergency_gui_fix.py  fix_gui.sh  gui_diagnostic.sh  gui_launcher.py  gui_launcher_enhanced.py  gui_launcher_smart.py  health_check.sh  implementation_summary.py  launcher.py  my_conversations_20250630_225441.json  poe_conversations_20250725_125717.csv  (+18 more)
.copilot/: instructions.md  rules.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  dependency-update.yml  docs.yml  release.yml  security.yml
archive/: README.md
archive/old-root/: COMPREHENSIVE_ORGANIZATION_SUMMARY.md  MODERNIZATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  comprehensive_organization.py  gui_launcher_new.py  run_comprehensive_organization.py
assets/: README.md
assets/themes/: dark.json  light.json
config/: poe_tokens.example.json  secrets.example.json  session.example.json
data/: README.md
dev-tools/: README.md  __init__.py
dev-tools/api/: README.md  query_poe_api.py
dev-tools/debug/: demo_startup_integration.py  enhanced_summary.py
dev-tools/graphql/: README.md  debug_graphql.py  debug_graphql_focused.py
dev-tools/testing/: README_conversation_tests.md  check_database_content.py  check_gui_database_path.py  comprehensive_search_verification.py  database_content_analysis.py  database_status.py  debug_database_access.py  debug_search_widget.py  detailed_search_diagnostics.py  empty_search_shows_all_test.py  final_search_verification_summary.py  final_verification.py  gui_search_flow_test.py  gui_search_test.py  quick_conversation_test.py  search_diagnostics.py  search_failure_diagnosis.py  search_functionality_test.py  simple_search_diagnostics.py  simple_search_test.py  test_api_simple.py  test_categorization_worker_fix.py  test_chrome_detection.py  test_conversation_comprehensive.py  test_conversation_history.py  test_conversation_integration.sh  test_conversation_search.py  test_conversation_search_integration.py  test_date_filtering.py  test_formkey_security.py  test_formkey_simple.py  test_formkey_validation.py  test_integration.py  test_message_retrieval.py  test_run_script.py  test_search_widget_database.py  test_searchworker_fix.py  test_show_all_conversations.py  test_sync_worker.py  test_sync_worker_direct.py  (+7 more)
dev-tools/token/: README.md  force_token_extraction.py
dev-tools/utilities/: auto_installer.py  auto_installer_summary.py  cleanup_summary.py  complete_fix_summary.py  formkey_extraction_guide.py  import_real_conversations.py  populate_sample_data.py  run_gui_with_deps.py  save_formkey.py
docs/: API_STATUS_REPORT.md  AUTOMATIC_TOKEN_MANAGEMENT.md  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_SEARCH_COMPLETE.md  FORMKEY_EXTRACTION_GUIDE.md  PERFORMANCE.md  POE_API_INTEGRATION.md  PROBLEM_ANALYSIS.md  PROJECT_GOALS.md  PROJECT_STATUS.md  RATE_LIMITING.md  README.md  RUN_SCRIPT_FIX.md  TOKEN_UPDATE_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  compliance.md  index.md  installation.md  mkdocs.yml
docs/api/: API_REFERENCE.md  README.md
docs/architecture/: README.md  SYSTEM_DESIGN.md
docs/deployment/: DEPLOYMENT_GUIDE.md  README.md
docs/development/: DEVELOPMENT_SETUP.md  README.md
docs/user-guides/: README.md  USER_MANUAL.md
logs/: README.md  search_issue_resolution_summary.py
requirements/: base.txt  dev.txt  test.txt
scripts/: README.md  __init__.py  browser_poe.py  browser_poe_fixed.py  capture_poe_cookies.py  check_poe_config.py  check_status.sh  clean.sh  comprehensive_poe_tests.py  debug_official_api.py  debug_poe_wrapper_response.py  debug_with_venv.sh  extract_formkey.py  generate_icons.py  get_my_conversations.py  list_poe_conversations.py  move_root_files.sh  organize_scripts.sh  organize_scripts_advanced.sh  poe_bot.py  quick_list_conversations.py  refresh_tokens.py  run-gui.sh  setup-dev.sh  setup_playwright_venv.sh  test_cookie_extraction.py  test_database_integration.py  test_official_api.py  test_poe_api_integration.py  test_poe_wrapper_with_cookies.py  test_session_management.py  test_tray.py  test_true_chat_history.py  test_wrapper_conversations.py  verify_modernization.sh
scripts/automation/: automation.py
scripts/debug/: debug_client.py  debug_poe_connection.py  debug_poe_search.py  debug_startup.py
scripts/deploy/: README.md
scripts/desktop/: __init__.py  poe-search.desktop  poe_gui_automated.py
scripts/development/: README.md  debug_browser.py  finalize_setup.py  move_tests.py  organize_project.py
scripts/import/: capture_poe_cookies_with_profile.py  get_chrome_formkey.py  get_cookies.py  manage_credentials.py  update_config.py  update_cookies.py
scripts/migration/: README.md
scripts/test/: __init__.py  direct_poe_token_test.py  poe_retry.py  quick_test.py  test_auth.py  test_automated_startup.py  test_browser_extraction.py  test_conversation_display.py  test_conversation_history.py  test_conversation_sync.py  test_conversation_titles.py  test_graphql_debug.py  test_gui_approach.py  test_poe_api.py  test_poe_connection.py  test_rate_limiting.py  test_rate_limiting_features.py  (+3 more)
src/: session.json
tests/: README.md  __init__.py  conftest.py  corrected_test.py  direct_test.py  discover_methods.py  final_comprehensive_test.py  fixed_test.py  gui_style_test.py  method_timeout_test.py  minimal_api_test.py  minimal_test.py  simple_test.py  test_bot_discovery.py  test_chat_history.py  test_conversation_fetching.py  test_conversation_search.py
(+106 files in other folders)
